--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
     "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
