--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^4.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-contexify": "^5.0.0",
     "react-dom": "18.1.0",
     "zustand": "^4.0.0-rc.1"
   },
