--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.1.0",
     "react-contexify": "^5.0.0",
     "react-dom": "18.1.0",
+    "reactjs-popup": "^2.0.5",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
