--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.1.0",
     "react-contexify": "^5.0.0",
     "react-dom": "18.1.0",
+    "react-modal": "^3.15.1",
     "reactjs-popup": "^2.0.5",
     "zustand": "^4.0.0-rc.1"
   },
@@ -23,6 +24,7 @@
     "@types/node": "17.0.33",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "autoprefixer": "^10.4.7",
