--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,9 @@
     "@typescript-eslint"
   ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": ["/tsconfig.json"]
+  },
   "rules": {
     "prettier/prettier": [
       "error",
