--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.1.0",
     "react-modal": "^3.15.1",
     "reactjs-popup": "^2.0.5",
+    "sharp": "^0.30.5",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
